--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
                 <ul class="list-unstyled components">
                     <p>Dummy Heading</p>
-                    <li class="active">
+                    <!--class="active"-->
+                    <li >
                         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
                         <ul class="collapse list-unstyled" id="homeSubmenu">
                             <li><a href="#">Home 1</a></li>
@@ -43,9 +44,27 @@
                             <li><a href="#">Page 2</a></li>
                             <li><a href="#">Page 3</a></li>
                         </ul>
+                        <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false">Pages</a>
+                        <ul class="collapse list-unstyled" id="pageSubmenu2">
+                            <li><a href="#qwwww">Page 1</a></li>
+                            <li><a href="#">Page 2</a></li>
+                            <li><a href="#">Page 3</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio1</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio2</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio3</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio4</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
