--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-        <div class="wrapper">
+        <div class="wrapper" id="main"  data-target=".navbar">
             <!-- Sidebar Holder -->
             <nav id="sidebar">
                 <div class="sidebar-header">
@@ -80,26 +80,109 @@
             <!-- Page Content Holder -->
             <div id="content">
 
-                <nav class="navbar navbar-default">
-                    <div class="container-fluid">
+                <!--<nav class="navbar navbar-default">-->
+                    <!--<div class="container-fluid">-->
 
-                        <div class="navbar-header">
-                            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-                                <i class="glyphicon glyphicon-align-left"></i>
-                                <span>Toggle Sidebar</span>
-                            </button>
-                        </div>
+                        <!--<div class="navbar-header">-->
+                            <!--<button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">-->
+                                <!--<i class="glyphicon glyphicon-align-left"></i>-->
+                                <!--<span>Toggle Sidebar</span>-->
+                            <!--</button>-->
+                        <!--</div>-->
 
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+                        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
+                            <!--<ul class="nav navbar-nav navbar-right">-->
+                                <!--<li><a href="#">Page</a></li>-->
+                                <!--<li><a href="#">Page</a></li>-->
+                                <!--<li><a href="#">Page</a></li>-->
+                                <!--<li><a href="#">Page</a></li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</nav>-->
+
+                <P>Программа  изготовлена в компании:  ООО Битник.<br>
+                    Программа является кассовым терминалом с возможностью:<br></P>
+                <ul>
+                    <li ><P>Производить настройки подключаемого кассового аппарата.</P></li>
+                    <li ><P>Пробивать чеки текущей продажи За наличный расчет.</P></li>
+                    <li ><P>Пробивать чеки текущей продажи Эквайрнг (Сбер. Банк).</P></li>
+                    <li ><P>Осуществлять возврат товара в контексте текущей смены.</P></li>
+                    <li ><P>Учет остатков в торговой точке на момент продажи.</P></li>
+                    <li ><P>Мониторинг исторических данных о продажи.</P></li>
+                    <li ><P>Принимать служебные распоряжения.</P></li>
+                    <li ><P>Отправлять различные заявки.</P></li>
+                </ul>
+
+                <P>Программа написана на Java    Javafx.<br>
+                Программа может быть развернута на Windows  и Unix подобных операционных системах,<br>
+                разрядностью 32-64 бит.</P>
+
+                <P>Программа поддерживает контрольно кассовое оборудование производителя АТОЛ<br>
+                <ul>
+                <li ><P>3 Триум-Ф,</P></li>
+                <li ><P>14 ФЕЛИКС-Р Ф,</P></li>
+                <li ><P>15 ФЕЛИКС-02К / ЕНВД,</P></li>
+                <li ><P>17 МЕРКУРИЙ-114.1Ф,</P></li>
+                <li ><P>18 ШТРИХ-ФР-Ф,</P></li>
+                <li ><P>19 ЭЛВЕС-МИНИ-ФР-Ф,</P></li>
+                <li ><P>20 ТОРНАДО,</P></li>
+                <li ><P>23 ТОРНАДО-К,</P></li>
+                <li ><P>24 ФЕЛИКС-РК / ЕНВД,</P></li>
+                <li ><P>25 ШТРИХ-ФР-К / ПТК,</P></li>
+                <li ><P>26 ЭЛВЕС-ФР-К,</P></li>
+                <li ><P>27 ФЕЛИКС-3СК,</P></li>
+                <li ><P>28 ШТРИХ-МИНИ-ФР-К/ ПТК/ ПТК,</P></li>
+                <li ><P>30 FPrint-02K / ЕНВД,</P></li>
+                <li ><P>31 FPrint-03K / ЕНВД,</P></li>
+                <li ><P>32 FPrint-88K / ЕНВД,</P></li>
+                <li ><P>33 BIXOLON-01K,</P></li>
+                <li ><P>35 FPrint-5200K / ЕНВД,</P></li>
+                <li ><P>41 PayVKP-80K,</P></li>
+                <li ><P>42 Аура-01ФР-KZ,</P></li>
+                <li ><P>43 PayVKP-80KZ,</P></li>
+                <li ><P>45 PayPPU-700K,</P></li>
+                <li ><P>46 PayCTS-2000K,</P></li>
+                <li ><P>47 FPrint -55 ПТК / K / ЕНВД,</P></li>
+                <li ><P>50 Wincor Nixdorf TH-230K,</P></li>
+                <li ><P>51 FPrint -11 ПТК / ЕНВД,</P></li>
+                <li ><P>52 FPrint -22 ПТК / K / ЕНВД,</P></li>
+                <li ><P>53 FPrint -77 ПТК / ЕНВД,</P></li>
+                <li ><P>54 FPrintPay-01ПТК,</P></li>
+                <li ><P>57 АТОЛ 25Ф,</P></li>
+                <li ><P>62 АТОЛ 55Ф,</P></li>
+                <li ><P>63 АТОЛ 22Ф,</P></li>
+                <li ><P>64 АТОЛ 52Ф,</P></li>
+                <li ><P>67 АТОЛ 11Ф,</P></li>
+                <li ><P>69 АТОЛ 77Ф,</P></li>
+                <li ><P>75 АТОЛ 60Ф,</P></li>
+                <li ><P>76 Казначей ФА,</P></li>
+                <li ><P>77 АТОЛ 42ФС,</P></li>
+                <li ><P>101 POSPrint FP410K,</P></li>
+                <li ><P>102 MSTAR-Ф,</P></li>
+                <li ><P>103 Мария-301 МТМ,</P></li>
+                <li ><P>106 СП101ФР-К/СП402ФР-К,</P></li>
+                <li ><P>107 ШТРИХ-КОМБО-ФР-К,</P></li>
+                <li ><P>109 МИНИ-ФП6,</P></li>
+                <li ><P>110 ШТРИХ-М-ФР-К//ПТК,</P></li>
+                <li ><P>111 MSTAR-TK.1,</P></li>
+                <li ><P>113 ШТРИХ-LIGHT-ФР-К/ ПТК,</P></li>
+                <li ><P>114 КРИСТАЛЛ СЕРВИС: ПИРИТ ФР01К,</P></li>
+                <li ><P>115 NCR-001K,</P></li>
+                <li ><P>116 IKC-E260T,</P></li>
+                <li ><P>117 ПОРТ FP-300/FP-550/FP-1000,</P></li>
+                <li ><P>118 ШТРИХ-ФР-Ф (БЕЛАРУСЬ),</P></li>
+                <li ><P>119 Datecs: FP3530T,</P></li>
+                <li ><P>120 ПОРТ FP-60,</P></li>
+                <li ><P>121 Мебиус-2К/3К,</P></li>
+                <li ><P>123 Spark-801T/115K,</P></li>
+                <li ><P>125 ШТРИХ-ФР-К-KZ,</P></li>
+                <li ><P>126 Штрих-М: ПТК RR-01К 02К 04К,</P></li>
+                <li ><P>127 Штрих-М: ПТК Retail-01К,</P></li>
+                <li ><P>128 Кристалл Сервис: Pirit K</P></li>
+                </ul>
+                <br>
+                <br>
 
                 <img src="image/head.png"  class="img-responsive"/>
                 <h2>Collapsible Sidebar Using Bootstrap 3</h2>
@@ -108,7 +191,7 @@
 
                 <div class="line"></div>
 
-                <img src="image/head_action.png" height="1200" width="1920" class="img-responsive"/>
+                <img data-original="image/head_action.png" height="1200" width="1920" class="img-responsive"/>
                 <h2>Lorem Ipsum Dolor</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -122,6 +205,7 @@
                 <h3>Lorem Ipsum Dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
+
 
         </div>
 
@@ -148,8 +232,22 @@
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
          <script type="text/javascript">
+
+
              $(document).ready(function () {
+
+
+
+                 $.getScript('https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js',function(){
+
+                     $('#main .img-responsive').lazyload({
+                     });
+                 });
+
+
+
                  $('#sidebarCollapse').on('click', function () {
+
                      $('#sidebar').toggleClass('active');
                  });
              });
