--- a/index3.html
+++ b/index3.html
@@ -106,10 +106,10 @@
     <P>Программа написана на Java <a class="btn btn-link" href="https://ru.wikipedia.org/wiki/JavaFX">JavaFx</a> .<br>
         Программа может быть развернута на Windows и Unix подобных операционных системах,<br>
         разрядностью 32-64 бит.
-    Программа может эксплуатироваться на компьютере стипом мониора - сенсорный экран (touchscreen)<br>
-    Программа поддерживает контрольно кассовое оборудование производителя <a href="http://www.atol.ru/"
-                                                                                class="btn btn-link">АТОЛ</a> <br>
-    <a href="#spoiler-1" data-toggle="collapse" class="btn btn-primary">Список моделей</a></P>
+        Программа может эксплуатироваться на компьютере с типом мониора - сенсорный экран (touchscreen)<br>
+        Программа поддерживает контрольно кассовое оборудование производителя <a href="http://www.atol.ru/"
+                                                                                 class="btn btn-link">АТОЛ</a> <br>
+        <a href="#spoiler-1" data-toggle="collapse" class="btn btn-primary">Список моделей</a></P>
     <div class="collapse" id="spoiler-1">
         <ul>
             <li>
@@ -179,7 +179,7 @@
     </P><img src="image/head.png" class="img-responsive"/>
     <h2 id="home2">Установка программы</h2>
     <p>На Linux (Ubuntu) программа ставится запуском скрипта – установщика с правами администратора.<br>
-        Кассовый аппарат (ККM) подключается через USB порт. Пинпад подключается тоже через USB порт, настроек в программе не
+        Кассовый аппарат (ККM) подключается через USB порт. Пинпад подключается через USB порт, настроек в программе не
         требует, пинпад должен быть настроен сотрудниками банка.<br>
         Сканер штрих кода подключается через USB порт в режиме клавиатуры, настроек не требует<br>
     <div class="alert alert-warning">
@@ -192,8 +192,8 @@
             драйвера ккм.</a><br>
         <a class="btn btn-link" href="http://spb-kassa.ru/%D0%B0%D1%82%D0%BE%D0%BB_%D0%BF%D0%BE%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%B8%D0%B5_
         %D1%81%D0%BB%D1%83%D0%B6%D0%B1%D1%8B_EoU.html">Настройка службы EoU.</a><br>
-        В любой каталог копируются файлы прогрммы.
-        Пинпад подключается  через USB порт, настроек в программе не
+        В любой каталог копируются файлы программы.
+        Пинпад подключается через USB порт, настроек в программе не
         требует, пинпад должен быть настроен сотрудниками банка.<br>
         Сканер штрих кода подключается через USB порт в режиме клавиатуры, настроек не требует<br>
     </p>
@@ -201,29 +201,121 @@
     <div class="line"></div>
 
     <img data-original="image/head_action.png" height="1200" width="1920" class="img-responsive"/>
-    <h2>Устновка программы</h2>
-    <p>На Linux (Ubuntu) программа ставится запуском скрипта – установщика с правами администратора.<br>
-        Кассовый аппарат (ККТ) подключается через USB . Пинпад подключается тоже через USB порт, настроек в программе не
-        требует, пинпад должен быть настроен сотрудниками банка.<br>
-        Сканер штрих кода подключается через USB порт в режиме клавиатуры, настроек не требует<br>
+    <h2>Старт программы</h2>
+    <p>Старт программы происходит автоматически при загрузке компьютера<br>
+        Так же можно осуществить старт через ярлык на рабочем столе.<br></p>
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> В ККТ, должен быт выставлен Режим обмена – USB.
+        <strong>Внимание:</strong> Перед загрузкой системы или старте программы, кассовый аппарат должен быть
+        подключен.<br>
+        Если этого не произошло, выполнить действие после подключения ККМ к ком-ру: КАССА -> СОСТОЯНИЕ КАССЫ.
     </div>
 
-    </p>
+    <p>Во время старта программа обращается к кассовому аппарату, за данными о текущей смене.
+    Главные настройки программы отображаются в нижнем баре окна программы:<br>
+    <ul>
+
+        <li><P>Точка: индентификатор предприятия (тороговой точки) цифровой тип.</P></li>
+        <li><P>Версия: Текущая версия программы.</P></li>
+        <li><P>Профиль: Профиль программы, к какому серверу обращается программа (определяется в коде программы)</P></li>
+        <li><P>Эквайринг: Выключен или банк оператора эквайринга.</P></li>
+        <li><P>Выручка: Текущая выручка, берется с ККМ, при каждом запросе программы к ККМ,в разрезе смены ККМ.</P></li>
+        <li><P>Сменный итог:Текущий сменный итог, берется с ККМ, при каждом запросе программы к ККМ,в разрезе смены
+            ККМ.</P></li>
+        <li><P>Наличность в Д.Я.: Наличность в денежном ящике ККМ, берется с ККМ, при каждом запросе программы к ККМ,в
+            разрезе смены ККМ.</P></li>
+        <li><P>Б. Нал: Сумма текущик безнальных оппераций в разрезе смены ккм, считается программой на основании
+            сохраненных данных.</P></li>
+        <li><P>Смена: Номер смены в ККМ.</P></li>
+        <li><P>Статус смены ККМ: Смена открыта - Смена закрыта.</P></li>
+        </li>
+    </ul>
+
 
     <div class="line"></div>
 
-    <h2 id="home3">Lorem Ipsum Dolor</h2>
+    <h2 id="home3">Вход пользователя</h2>
+    <p>
+        Список всех доступных пользователей программа получает с сервера по запросу.<br>
+        Так же с сервера приходят все доступные продукты для продажи  и их реквизиты.<br>
+        При первом запуске программы, база данных пустая.<br>
+        Первый запуск должен осуществить установщик прогрммы, по специальному паролю который вшит в программный код.<br>
+        После удачного входа он должен обновить базу данных с сервера, в этих данных будеи и пароль<br>
+        системного администратора, который будет обслуживать прогрмму.<br>
+        Вход пользователя и администатора осуществляется через модальное окно: ДЕЙСТВИЯ -> ВХОД.<br>
+
+        Внимание, может случиться так, что  пароль входящего продавца может отсутствовать в базе данных<br>
+        для этого набираем 911911 и входим с правами только обновления базы данных.<br>
+        После обновления: ДЕЙСТВИЯ -> ОБНОВИТЬ ДАННЫЕ делаем выход: ДЕЙСТВИЯ -> ВЫХОД<br>
+        Производим вход: ДЕЙСТВИЯ -> ВХОД и пытаемся ввести пароль полученный у администратора.<br>
+        Если ничего не получается - обращаемся к администратору.<br>
+
+        Существует маленькое удобство, пароль можно вводить через сканер штрих кода.<br></p>
+
+    <div class="alert alert-warning">
+        <strong>Внимание:</strong> При удачном входе , автоматически происходит заливка в ККМ имени продавца (печатается на чеке)<br>
+        если кассовый аппарат был не подключен или произошол сбой при передаче данных, ввод имени продавца осушествить вручную: КАССА->СМЕНА КАССИРА ККМ.<br>
+        Обязательно убедиться что смена произошла удачно - вызвать окно сотояния ККМ: КАССА -> СОСТОЯНИЕ КАССЫ. Поле: Кассир<br>
+    </div>
+
+
+     Обновить данные с программе с сервера:ДЕЙСТВИЯ -> ОБНОВИТЬ ДАННЫЕ
+        <p>После этого можно производить дальнейшие действия.</p>
+
+    <div class="line"></div>
+
+    <h3 id="home4">Открытие Закрытие смены</h3>
+
+
+
+
+
+
+
+    <!--<h3 id="home4">Открытие Закрытие смены</h3>-->
+    <!--<p>В начале рабочего дня продавец обязан открыть смену в ККМ, в конце рабочего дня произвести закрытие смены (Снятие-->
+    <!--Z отчета).<br>-->
+    <!--Открытие смены включает в себя:<br>-->
+    <!--<ul>-->
+    <!--<li>-->
+    <!--<P>Открытие смены в ККМ: КАССА -> ОТКРЫТИЕ СМЕНЫ, происходит открытие смены в ККМ, печатается документ об открытии-->
+    <!--смены.</P></li>-->
+    <!--<li><P>Внесение денег в кассу для выплаты сдачи: КАССА -> ВНЕСЕНИЕ (по желанию).</P></li>-->
+    <!--<li><P>Можно произвести процедуру открытия смены комплексно: ДЕЙСТВИЯ -> ОТКРЫТИЕ СМЕНЫ.</P></li>-->
+    <!--</ul>-->
+
+    <!--В этом случае произойдет комплексный ряд действий: Прием данных с сервера, открытие смены ККМ, запрос на внесение-->
+    <!--денег в кассу.<br>-->
+    <!--Если в результате этой процедуры произошли ошибки программа сообщит об этих ошибках, и предложит произвести действия-->
+    <!--по отдельности.<br><br>-->
+    <!--Закрытие смены ККМ.<br>-->
+    <!--Производится в конце рабочего дня.<br>-->
+    <!--Включает в себя процедуры:<br></p>-->
+    <!--<ul>-->
+    <!--<li><P> Сверка итогов с банком (если включен Эквайринг) ЭКВАЙРИНГ -> СВЕРКА ИТОГОВ.</P></li>-->
+    <!--<li><P> Выплата наличности из ККМ: КАССА -> ВЫПЛАТА.</P></li>-->
+    <!--<li><P> Снятие z отчета: КАССА -> Z ОТЧЁТ.</P></li>-->
+    <!--</ul>-->
+
+    <!--<P>Рекомендуется производить все эти действия в комплексе: ДЕЙСТВИЯ -> ЗАКРЫТИЕ СМЕНЫ.<br>-->
+    <!--Если в результате этой процедуры произошли ошибки программа сообщит об этих ошибках, и предложит произвести действия-->
+    <!--по отдельности.<br>-->
+    <!--В конце комплексной процедуры закрытия смены не зависимо от ее результатов - пользователь выходит из программы.<br>-->
+    <!--<p>-->
+
+
+
+
+
+
+    <div class="line"></div>
+    <h3 id="home5">Lorem Ipsum Dolor</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
         laborum.</p>
-
     <div class="line"></div>
-
-    <h3 id="home4">Lorem Ipsum Dolor</h3>
+    <h3 id="home6">Lorem Ipsum Dolor</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
