--- a/index3.html
+++ b/index3.html
@@ -211,23 +211,24 @@
     </div>
 
     <p>Во время старта программа обращается к кассовому аппарату, за данными о текущей смене.
-    Главные настройки программы отображаются в нижнем баре окна программы:<br>
-    <ul>
+        Главные настройки программы отображаются в нижнем баре окна программы:<br>
+        <ul>
 
-        <li><P>Точка: индентификатор предприятия (тороговой точки) цифровой тип.</P></li>
-        <li><P>Версия: Текущая версия программы.</P></li>
-        <li><P>Профиль: Профиль программы, к какому серверу обращается программа (определяется в коде программы)</P></li>
-        <li><P>Эквайринг: Выключен или банк оператора эквайринга.</P></li>
-        <li><P>Выручка: Текущая выручка, берется с ККМ, при каждом запросе программы к ККМ,в разрезе смены ККМ.</P></li>
-        <li><P>Сменный итог:Текущий сменный итог, берется с ККМ, при каждом запросе программы к ККМ,в разрезе смены
-            ККМ.</P></li>
-        <li><P>Наличность в Д.Я.: Наличность в денежном ящике ККМ, берется с ККМ, при каждом запросе программы к ККМ,в
-            разрезе смены ККМ.</P></li>
-        <li><P>Б. Нал: Сумма текущик безнальных оппераций в разрезе смены ккм, считается программой на основании
-            сохраненных данных.</P></li>
-        <li><P>Смена: Номер смены в ККМ.</P></li>
-        <li><P>Статус смены ККМ: Смена открыта - Смена закрыта.</P></li>
-        </li>
+            <li>
+    <P>Точка: индентификатор предприятия (тороговой точки) цифровой тип.</P></li>
+    <li><P>Версия: Текущая версия программы.</P></li>
+    <li><P>Профиль: Профиль программы, к какому серверу обращается программа (определяется в коде программы)</P></li>
+    <li><P>Эквайринг: Выключен или банк оператора эквайринга.</P></li>
+    <li><P>Выручка: Текущая выручка, берется с ККМ, при каждом запросе программы к ККМ,в разрезе смены ККМ.</P></li>
+    <li><P>Сменный итог:Текущий сменный итог, берется с ККМ, при каждом запросе программы к ККМ,в разрезе смены
+        ККМ.</P></li>
+    <li><P>Наличность в Д.Я.: Наличность в денежном ящике ККМ, берется с ККМ, при каждом запросе программы к ККМ,в
+        разрезе смены ККМ.</P></li>
+    <li><P>Б. Нал: Сумма текущик безнальных оппераций в разрезе смены ккм, считается программой на основании
+        сохраненных данных.</P></li>
+    <li><P>Смена: Номер смены в ККМ.</P></li>
+    <li><P>Статус смены ККМ: Смена открыта - Смена закрыта.</P></li>
+    </li>
     </ul>
 
 
@@ -236,14 +237,14 @@
     <h2 id="home3">Вход пользователя</h2>
     <p>
         Список всех доступных пользователей программа получает с сервера по запросу.<br>
-        Так же с сервера приходят все доступные продукты для продажи  и их реквизиты.<br>
+        Так же с сервера приходят все доступные продукты для продажи и их реквизиты.<br>
         При первом запуске программы, база данных пустая.<br>
         Первый запуск должен осуществить установщик прогрммы, по специальному паролю который вшит в программный код.<br>
         После удачного входа он должен обновить базу данных с сервера, в этих данных будеи и пароль<br>
         системного администратора, который будет обслуживать прогрмму.<br>
         Вход пользователя и администатора осуществляется через модальное окно: ДЕЙСТВИЯ -> ВХОД.<br>
 
-        Внимание, может случиться так, что  пароль входящего продавца может отсутствовать в базе данных<br>
+        Внимание, может случиться так, что пароль входящего продавца может отсутствовать в базе данных<br>
         для этого набираем 911911 и входим с правами только обновления базы данных.<br>
         После обновления: ДЕЙСТВИЯ -> ОБНОВИТЬ ДАННЫЕ делаем выход: ДЕЙСТВИЯ -> ВЫХОД<br>
         Производим вход: ДЕЙСТВИЯ -> ВХОД и пытаемся ввести пароль полученный у администратора.<br>
@@ -252,68 +253,85 @@
         Существует маленькое удобство, пароль можно вводить через сканер штрих кода.<br></p>
 
     <div class="alert alert-warning">
-        <strong>Внимание:</strong> При удачном входе , автоматически происходит заливка в ККМ имени продавца (печатается на чеке)<br>
-        если кассовый аппарат был не подключен или произошол сбой при передаче данных, ввод имени продавца осушествить вручную: КАССА->СМЕНА КАССИРА ККМ.<br>
-        Обязательно убедиться что смена произошла удачно - вызвать окно сотояния ККМ: КАССА -> СОСТОЯНИЕ КАССЫ. Поле: Кассир<br>
+        <strong>Внимание:</strong> При удачном входе , автоматически происходит заливка в ККМ имени продавца (печатается
+        на чеке)<br>
+        если кассовый аппарат был не подключен или произошол сбой при передаче данных, ввод имени продавца осушествить
+        вручную: КАССА->СМЕНА КАССИРА ККМ.<br>
+        Обязательно убедиться что смена произошла удачно - вызвать окно сотояния ККМ: КАССА -> СОСТОЯНИЕ КАССЫ. Поле:
+        Кассир<br>
+    </div>
+    <p>После этого можно производить дальнейшие действия.</p>
+    <div class="line"></div>
+    <h3 id="home4">Открытие Закрытие смены</h3>
+    <p>В начале рабочего дня продавец обязан открыть смену в ККМ, в конце рабочего дня произвести закрытие смены (Снятие
+        Z отчета).<br>
+        Открытие смены включает в себя:<br></p>
+    <ul>
+        <li> <P>Обновление локальных данных с сервера ДЕЙСТВИЯ -> ОБНОВИТЬ ДАННЫЕ</P></li>
+
+        <li>
+            <P>Открытие смены в ККМ: КАССА -> ОТКРЫТИЕ СМЕНЫ, происходит открытие смены в ККМ, печатается документ об
+                открытии
+                смены.</P></li>
+        <li><P>Внесение денег в кассу для выплаты сдачи: КАССА -> ВНЕСЕНИЕ (по желанию).</P></li>
+
+    </ul>
+    <p>Можно произвести процедуру открытия смены комплексно: ДЕЙСТВИЯ -> ОТКРЫТИЕ СМЕНЫ.<br>
+        В этом случае произойдет комплексный ряд действий: Прием данных с сервера, открытие смены ККМ, запрос на
+        внесение
+        денег в кассу.<br>
+        Если в результате этой процедуры произошли ошибки программа сообщит об этих ошибках, и предложит произвести
+        действия
+        по отдельности.<br><br>
+        Закрытие смены ККМ.<br>
+        Производится в конце рабочего дня.<br>
+        Включает в себя процедуры:<br></p>
+    <ul>
+        <li><P> Сверка итогов с банком (если включен Эквайринг) ЭКВАЙРИНГ -> СВЕРКА ИТОГОВ.</P></li>
+        <li><P> Выплата наличности из ККМ: КАССА -> ВЫПЛАТА.</P></li>
+        <li><P> Снятие z отчета: КАССА -> Z ОТЧЁТ.</P></li>
+    </ul>
+
+    <p>Рекомендуется производить все эти действия в комплексе: ДЕЙСТВИЯ -> ЗАКРЫТИЕ СМЕНЫ.<br>
+        Если в результате этой процедуры произошли ошибки программа сообщит об этих ошибках, и предложит произвести
+        действия
+        по отдельности.<br>
+        В конце комплексной процедуры закрытия смены не зависимо от ее результатов - пользователь выходит из
+        программы.<br>
+    </p>
+
+
+    <div class="line"></div>
+    <h3 id="home5">Выбор товара, продажа, печать чека</h3>
+    <p>Что бы произвести продажу нужно сформировать чек.<br>
+    Чек формируется двумя способами:<br>
+    Поиск товара через сканер:<br>
+    Окно ввода кода товара должно быть активным, сканер сканирует продукт и ищет товар с таким ШК в базе, если товар<br>
+    находится, он заносится в чек, если нет то выходит окно с предупреждением что товар не найден.<br>
+    Товар заносится с количеством 1 еденица товара, если провести повторно сканером по товару, количество товара увеличится на еденицу.<br>
+    Количество можно скоректировать в ручном режиме, нажать кнопку на товаре в чеке, и ввести необходимое количество.<br>
+    Внимание Товары могут иметь одинаковые штрихкоды, в таком случае прогрмма предложит  ручной выбор из найденых товаров.<br>
+    Поиск товара в ручном режиме:<br>
+    Продавец в онкно поиска вводит штрих код товара или его цену.<br>
+    Удаление выбранного товара производится через окно  редактирования количества товара.<br>
+    Печать чека производится через две кнопки Печать за наличный расчет Печать безналичный расчет.<br>
+    При печати через безналичный расчет (эквайринг) печатается два чека банка.</p>
+    <div class="alert alert-warning">
+        <strong>Внимание:</strong> Поиск по названию отключен, по желанию заказчика.
+    </div>
+    <div class="alert alert-warning">
+        <strong>Внимание:</strong> Нулевое количество товара равно как и отрицательное не допускается.
+    </div>
+    <div class="alert alert-warning">
+        <strong>Внимание:</strong> Обязательно дождаться конца печатию При заваисании, при печатании чека, сообщить администратору!!!
+    </div>
+
+    <div class="alert alert-warning">
+        <strong>Внимание:</strong> Отмена оплаты по безналу производится  клиентом с пинпада (красная кнопка).<br>
+        Программа не выполняет эту функцию!!!!
     </div>
 
 
-     Обновить данные с программе с сервера:ДЕЙСТВИЯ -> ОБНОВИТЬ ДАННЫЕ
-        <p>После этого можно производить дальнейшие действия.</p>
-
-    <div class="line"></div>
-
-    <h3 id="home4">Открытие Закрытие смены</h3>
-
-
-
-
-
-
-
-    <!--<h3 id="home4">Открытие Закрытие смены</h3>-->
-    <!--<p>В начале рабочего дня продавец обязан открыть смену в ККМ, в конце рабочего дня произвести закрытие смены (Снятие-->
-    <!--Z отчета).<br>-->
-    <!--Открытие смены включает в себя:<br>-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<P>Открытие смены в ККМ: КАССА -> ОТКРЫТИЕ СМЕНЫ, происходит открытие смены в ККМ, печатается документ об открытии-->
-    <!--смены.</P></li>-->
-    <!--<li><P>Внесение денег в кассу для выплаты сдачи: КАССА -> ВНЕСЕНИЕ (по желанию).</P></li>-->
-    <!--<li><P>Можно произвести процедуру открытия смены комплексно: ДЕЙСТВИЯ -> ОТКРЫТИЕ СМЕНЫ.</P></li>-->
-    <!--</ul>-->
-
-    <!--В этом случае произойдет комплексный ряд действий: Прием данных с сервера, открытие смены ККМ, запрос на внесение-->
-    <!--денег в кассу.<br>-->
-    <!--Если в результате этой процедуры произошли ошибки программа сообщит об этих ошибках, и предложит произвести действия-->
-    <!--по отдельности.<br><br>-->
-    <!--Закрытие смены ККМ.<br>-->
-    <!--Производится в конце рабочего дня.<br>-->
-    <!--Включает в себя процедуры:<br></p>-->
-    <!--<ul>-->
-    <!--<li><P> Сверка итогов с банком (если включен Эквайринг) ЭКВАЙРИНГ -> СВЕРКА ИТОГОВ.</P></li>-->
-    <!--<li><P> Выплата наличности из ККМ: КАССА -> ВЫПЛАТА.</P></li>-->
-    <!--<li><P> Снятие z отчета: КАССА -> Z ОТЧЁТ.</P></li>-->
-    <!--</ul>-->
-
-    <!--<P>Рекомендуется производить все эти действия в комплексе: ДЕЙСТВИЯ -> ЗАКРЫТИЕ СМЕНЫ.<br>-->
-    <!--Если в результате этой процедуры произошли ошибки программа сообщит об этих ошибках, и предложит произвести действия-->
-    <!--по отдельности.<br>-->
-    <!--В конце комплексной процедуры закрытия смены не зависимо от ее результатов - пользователь выходит из программы.<br>-->
-    <!--<p>-->
-
-
-
-
-
-
-    <div class="line"></div>
-    <h3 id="home5">Lorem Ipsum Dolor</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
     <div class="line"></div>
     <h3 id="home6">Lorem Ipsum Dolor</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
